--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Wonkyung Lee
 email: leewk921223@gmail.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+description: Wonkyung Lee's blog
+
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://kascia.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  kascia
